# jrabbit.github.com

./: .gitignore  CNAME  README.md  ghetto.css  humans.txt  index.html  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  resume.html  tasks.py
.github/workflows/: pelican.yml
content/: ceno.md  coredns-for-fancy-records.md  docker-woes-solutions.md  lenovo-slow-gesture-windows.md
content/pages/: about.html
css/: main.css  minimal.css  style.css
output/: archives.html  authors.html  categories.html  index.html  running-coredns-for-fancy-dns-records-like-sshfp.html  tags.html
output/author/: jack-laxson.html
output/category/: writeup.html
output/tag/: incremental-security.html  ssh.html
output/theme/css/: style.css
themes/custom/static/css/: style.css
themes/custom/templates/: article.html  base.html  index.html
