[tool.poetry]
name = "jrabbit.github.com"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pelican = {extras = ["markdown"], version = "^4.7.1"}
invoke = "^1.6.0"
typogrify = "^2.0.7"
livereload = "^2.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
